[gd_scene load_steps=10 format=3 uid="uid://kiqqev4oayf8"]

[ext_resource type="Script" path="res://Main.gd" id="1_rvob1"]
[ext_resource type="PackedScene" uid="uid://b0p74shck0gqo" path="res://Map.tscn" id="2_r2c0u"]
[ext_resource type="Texture2D" uid="uid://urc7358so6ky" path="res://addons/kenney_particle_pack/circle_05.png" id="4_e2dtj"]
[ext_resource type="Texture2D" uid="uid://cskhdpoknkmqp" path="res://addons/kenney_particle_pack/magic_03.png" id="5_7x6vg"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_x5ejt"]
ground_bottom_color = Color(0, 0, 0, 1)

[sub_resource type="Sky" id="Sky_x3mvp"]
sky_material = SubResource("ProceduralSkyMaterial_x5ejt")

[sub_resource type="Environment" id="Environment_ibpi1"]
background_mode = 2
sky = SubResource("Sky_x3mvp")
ambient_light_source = 3
tonemap_mode = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dlcbc"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dut3l"]
bg_color = Color(0, 0.607843, 0, 1)

[node name="World" type="Node3D"]
script = ExtResource("1_rvob1")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_color = Color(1, 1, 0.905882, 1)
light_energy = 0.6
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ibpi1")

[node name="Map" parent="." instance=ExtResource("2_r2c0u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.95094, 0)

[node name="MultiplayerUI" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="MainMenu" type="PanelContainer" parent="MultiplayerUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 395.0
offset_top = 222.0
offset_right = -395.0
offset_bottom = -222.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MultiplayerUI/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerUI/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="MultiplayerUI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="MultiplayerUI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="CopyIPButton" type="Button" parent="MultiplayerUI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Copy Host IP"

[node name="JoinButton" type="Button" parent="MultiplayerUI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="MultiplayerUI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter an IP"
alignment = 1

[node name="HUD" type="Control" parent="MultiplayerUI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
pivot_offset = Vector2(960, 540)
mouse_filter = 2

[node name="Crosshair" type="TextureRect" parent="MultiplayerUI/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(960, 540)
texture = ExtResource("4_e2dtj")
stretch_mode = 5

[node name="Hitmarker" type="TextureRect" parent="MultiplayerUI/HUD"]
visible = false
modulate = Color(1, 0, 0.372549, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
pivot_offset = Vector2(960, 540)
texture = ExtResource("5_7x6vg")
stretch_mode = 5

[node name="HealthBar" type="ProgressBar" parent="MultiplayerUI/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 1017.0
offset_right = -1457.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
theme_override_styles/background = SubResource("StyleBoxFlat_dlcbc")
theme_override_styles/fill = SubResource("StyleBoxFlat_dut3l")
value = 100.0
rounded = true
show_percentage = false

[node name="PanelContainer" type="PanelContainer" parent="MultiplayerUI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Player.tscn", "res://pistol.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="MultiplayerUI/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MultiplayerUI/MainMenu/MarginContainer/VBoxContainer/CopyIPButton" to="." method="_on_copy_ip_button_pressed"]
[connection signal="pressed" from="MultiplayerUI/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
